<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_BasicStats" Id="{d1ccd809-a102-4cca-a30c-cd78cea6d059}">
    <Declaration><![CDATA[TYPE ST_BasicStats :
STRUCT
	minimum:LREAL;				//The mimimum of the distribution
	maximum:LREAL;              //The maximum of the distribution
	avg:LREAL;                  //The Average of the distribution
	variance:LREAL;             //The Variance
	standardDeviation:LREAL;    //Standard deviation
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>