<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_Const" Id="{44ee7c46-ec3c-4f33-bda0-90bb201c28e9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	lastStatsValue:UDINT:=10;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>