<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_LastTimesStats" Id="{114b52f8-2a30-491f-b01f-6fcf6d354093}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_LastTimesStats EXTENDS FB_BasicStatistics
VAR_INPUT
	enable: BOOL;	//Enable time counting
END_VAR
VAR_OUTPUT
	lastTime:TIME;
	currTime:TIME;
	lastTimes:ARRAY[1..GVL_Const.lastStatsValue] OF TIME;
	arLastTimes:ARRAY[1..GVL_Const.lastStatsValue] OF LREAL;
END_VAR
VAR
	t1:TON;
	disableTrig:F_TRIG;
	i: UDINT;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[disableTrig(CLK:= enable);
IF disableTrig.Q THEN
	lastTime:= t1.ET;
	FOR i:= GVL_Const.lastStatsValue TO 2 BY -1 DO
		lastTimes[i]:= lastTimes[i-1];
	END_FOR
	lastTimes[1]:=lastTime;
	FOR i:= 1 TO GVL_Const.lastStatsValue DO
		arLastTimes[i]:= TIME_TO_LREAL(lastTimes[i])/1000;
	END_FOR
END_IF
t1(IN:= enable, PT:= T#7D);
currTime:= t1.ET;]]></ST>
    </Implementation>
    <Method Name="M_GetBasicStats" Id="{4423bfc3-d543-436b-b7ff-b92f25c2aa18}">
      <Declaration><![CDATA[METHOD M_GetBasicStats : ST_BasicStats
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[M_GetBasicStats.avg:=SUPER^.M_CalcAvg(THIS^.arLastTimes);
M_GetBasicStats.maximum:=SUPER^.M_CalcMax(THIS^.arLastTimes);
M_GetBasicStats.minimum:=SUPER^.M_CalcMin(THIS^.arLastTimes);
M_GetBasicStats.variance:=SUPER^.M_CalcVariance(THIS^.arLastTimes);
M_GetBasicStats.standardDeviation:=SUPER^.M_CalcSD(THIS^.arLastTimes);
]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_LastTimesStats">
      <LineId Id="9" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="21" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="63" Count="0" />
    </LineIds>
    <LineIds Name="FB_LastTimesStats.M_GetBasicStats">
      <LineId Id="5" Count="5" />
    </LineIds>
  </POU>
</TcPlcObject>